--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,14 +8,16 @@
 
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
+          <li class="nav-item"><%= link_to 'Home', root_path, class: 'nav-link' %></li>
           <% if user_signed_in? %>
             <li class="nav-item"><%= link_to 'User', edit_user_registration_path, class: 'nav-link' %></li>
             <li class="nav-item"><%= link_to 'Subjects', "/subjects", class: 'nav-link' %></li>
-            <li class="nav-item"><%= link_to 'Calender', "/calender", class: 'nav-link' %></li>
+            <li class="nav-item"><%= link_to 'Calender', "/calendar", class: 'nav-link' %></li>
             <li class="nav-item"><%= link_to "Log Out", destroy_user_session_path, :method => :delete, class: 'nav-link' %></li>
           <% end %>
           <% if !user_signed_in? %>
-            <%= link_to 'Sign in with Google', user_google_oauth2_omniauth_authorize_path %>
+            <li class="nav-item"><%= link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %></li>
+            <li class="nav-item"><%= link_to "Log In", new_user_session_path, class: 'nav-link' %></li>
           <% end %>
       </ul>
     </div>
