Finish functionality without pretify

--- a/app/views/subjects/_form.html.erb
+++ b/app/views/subjects/_form.html.erb
@@ -10,6 +10,10 @@
   </div>
 
   <div class="form-inputs">
+    <%= f.file_field :syllabus %>
+  </div>
+
+  <div class="form-inputs">
       <%= f.input :private, label: 'set private' %>
   </div>
 
