--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm navbar-light bg-light mb-4">
   <div class="container">
-    <%= link_to 'ScheduleInTouch', root_path, class: 'nav-link' %>
+    <h3><%= link_to 'ScheduleInTouch', root_path, class: 'nav-link' %></h3>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
