--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -1,2 +1,15 @@
-<h1>Page#home</h1>
-<p>Find me in app/views/page/home.html.erb</p>
+<h1>Welcome to ScheduleInTouch!</h1>
+<p>
+  ScheduleInTouch is a website that makes task scheduling convenient and efficient. 
+  It would allow users to join or create, subjects, tasks of each subject, and events of each task.
+  The schedule will show on the calendar. 
+</p>
+<p>
+  Here is the GitLab link of this project: <a href="https://gitlab.com/Siming-He/calendarintouch">ScheduleInTouch GitLab</a>
+</p>
+<p>
+  	&#10084; Sign up and enjoy scheduling! 	&#10084;
+</p>
+<p>
+  	- Siming He
+</p>
