--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -1,5 +1,3 @@
-<script src="https://kit.fontawesome.com/1d9373cc66.js" crossorigin="anonymous"></script>
-
 <p id="notice"><%= notice %></p>
 <h1>Subjects</h1>
 <table>
@@ -14,14 +12,14 @@
   <tbody>
     <% @subjects.each do |subject| %>
       <% if current_user.email != subject.owneremail && !subject.private %>
-        <% if subject.get_users.include?(current_user) %>
+        <% if Registration.where(subject_id: subject.id).find_by(user_id: current_user.id).nil? %>
           <tr>
             <td><%= subject.name %></td>
             <td><%= subject.description %></td>
             <td><%= link_to 'Show', subject %></td>
             <td>
-              <a href="/drop_subject/<%= current_user.id %>/<%= subject.id %>">
-                  <button type="button" class="btn btn-outline-secondary"><i class="far fa-plus-square"></i> Drop</button>
+              <a href="/add_subject/<%= current_user.id %>/<%= subject.id %>">
+                  <button type="button" class="btn btn-outline-secondary">Add</button>
               </a>
             </td>
           </tr>
@@ -31,8 +29,8 @@
             <td><%= subject.description %></td>
             <td><%= link_to 'Show', subject %></td>
             <td>
-              <a href="/add_subject/<%= current_user.id %>/<%= subject.id %>">
-                  <button type="button" class="btn btn-outline-secondary"><i class="far fa-plus-square"></i> Add</button>
+              <a href="/drop_subject/<%= current_user.id %>/<%= subject.id %>">
+                  <button type="button" class="btn btn-outline-secondary">Drop</button>
               </a>
             </td>
           </tr>
