--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -1,53 +1,101 @@
-<p id="notice"><%= notice %></p>
-<h1>Subjects</h1>
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="container">
+  <p id="notice"><%= notice %></p>
+  <h1>My Subjects</h1>
+  <table class="table table-striped table-success table-hover">
+    <thead>
+      <tr>
+        <th scope="col">Name</th>
+        <th scope="col">Description</th>
+        <th scope="col"></th>
+        <th scope="col"></th>
+        <th scope="col"></th>
+      </tr>
+    </thead>
 
-  <tbody>
-    <% @subjects.each do |subject| %>
-      <% if current_user.email != subject.owneremail && !subject.private %>
-        <% if Registration.where(subject_id: subject.id).find_by(user_id: current_user.id).nil? %>
+    <tbody>
+      <% @subjects.each do |subject| %>
+        <% if current_user.email != subject.owneremail && !subject.private %>
+          <% if !Registration.where(subject_id: subject.id).find_by(user_id: current_user.id).nil? %>
+            <tr>
+              <td><b><%= subject.name %></b></td>
+              <td><%= subject.description.first(100) %></td>
+              <td>
+                <div class="btn btn-success btn-sm">
+                  <%= link_to 'Show', subject, :class => "btn text-light" %>
+                </div>
+              </td>
+              <td>
+                <a href="/drop_subject/<%= current_user.id %>/<%= subject.id %>">
+                    <button type="button" class="btn btn-success btn-lg">Drop</button>
+                </a>
+              </td>
+              <td></td>
+            </tr>
+          <% end %>
+        <% elsif current_user.email == subject.owneremail %>  
           <tr>
-            <td><%= subject.name %></td>
-            <td><%= subject.description %></td>
-            <td><%= link_to 'Show', subject %></td>
-            <td>
-              <a href="/add_subject/<%= current_user.id %>/<%= subject.id %>">
-                  <button type="button" class="btn btn-outline-secondary">Add</button>
-              </a>
-            </td>
-          </tr>
-        <% else %>
-          <tr>
-            <td><%= subject.name %></td>
-            <td><%= subject.description %></td>
-            <td><%= link_to 'Show', subject %></td>
-            <td>
-              <a href="/drop_subject/<%= current_user.id %>/<%= subject.id %>">
-                  <button type="button" class="btn btn-outline-secondary">Drop</button>
-              </a>
-            </td>
+              <td><b><%= subject.name %></b></td>
+              <td><%= subject.description.first(100) %></td>
+              <td>
+                <div class="btn btn-success btn-sm">
+                  <%= link_to 'Show', subject, :class => "btn text-light" %>
+                </div>
+              </td>
+              <td>
+                <div class="btn btn-success btn-sm">
+                  <%= link_to 'Edit', edit_subject_path(subject), :class => "btn text-light" %>
+                </div>
+              </td>
+              <td>
+                <div class="btn btn-success btn-sm">
+                  <%= link_to 'Destroy', subject, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn text-light" %>
+                </div>
+              </td>
           </tr>
         <% end %>
-      <% elsif current_user.email == subject.owneremail %>  
-        <tr>
-            <td><%= subject.name %></td>
-            <td><%= subject.description %></td>
-            <td><%= link_to 'Show', subject %></td>
-            <td><%= link_to 'Edit', edit_subject_path(subject) %></td>
-            <td><%= link_to 'Destroy', subject, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        </tr>
       <% end %>
-    <% end %>
-  </tbody>
-</table>
+    </tbody>
+  </table>
 
-<br>
+  <br>
 
-<%= link_to 'New Subject', new_subject_path %>
+  <div class="btn btn-outline-dark btn-sm">
+    <%= link_to 'Create New Subject', new_subject_path, :class => "btn text-dark" %>
+  </div>
+  <br /><br /><br />
+
+  <h1>Other Subjects</h1>
+  <table class="table table-striped table-danger table-hover">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Description</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <% @subjects.each do |subject| %>
+        <% if current_user.email != subject.owneremail && !subject.private %>
+          <% if Registration.where(subject_id: subject.id).find_by(user_id: current_user.id).nil? %>
+            <tr>
+              <td><b><%= subject.name %></b></td>
+              <td><%= subject.description.first(30) %></td>
+              <td>
+                <div class="btn btn-danger btn-sm">
+                  <%= link_to 'Show', subject, :class => "btn text-light" %>
+                </div>
+              </td>
+              <td>
+                <a href="/add_subject/<%= current_user.id %>/<%= subject.id %>">
+                    <button type="button" class="btn btn-danger btn-lg">Add</button>
+                </a>
+              </td>
+              <td></td>
+            </tr>
+          <% end %>
+        <% end %>
+      <% end %>
+    </tbody>
+  </table>
+</div>
