--- a/app/views/tasks/_event_fields.html.erb
+++ b/app/views/tasks/_event_fields.html.erb
@@ -1,9 +1,15 @@
-<tr class="nested-fields">
-  <td>
-    <%= link_to_remove_association "remove", f, class: 'btn btn-primary btn-xs' %>
-  </td>
-  <td><%= f.input :title %></td>
-  <td><%= f.input :start %></td>
-  <td><%= f.input :end %></td>
-  <td><%= f.color_field :color, value: '#00FFFF' %></td>
-</tr>
+<div class="row">
+  <div class="nested-fields">
+    <div class="col-lg-12" style="padding: 10px;">
+      <div class="card text-center" style="width: 100%;">
+        <div class="card-body">
+          <h5 class="card-header"><%= f.input :title %></h5>
+          <p class="card-text"><%= f.input :start %></p>
+          <p class="card-text"><%= f.input :end %></p>
+          <p><%= f.color_field :color, value: '#00FFFF' %></p>
+          <%= link_to_remove_association "remove", f, class: 'btn btn-primary btn-xs' %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
